# 24783-Advanced-Engineering-Computation

./: README.md  readme.txt
src/: CMakeLists.txt
src/course_files/.svn/: wc.db
src/course_files/course_notes/LectureNote08/: Lecture08.pptx
src/course_files/course_notes/LectureNote16/: Lecture16.pptx
src/course_files/course_notes/LectureNote17/: Lecture17.pptx
src/course_files/course_notes/LectureNote18/: Lecture18.pptx
src/course_files/course_notes/LectureNote20/: Lecture20.pptx
src/course_files/course_notes/LectureNote21/: Lecture21.pptx
src/course_files/course_notes/LectureNote22/: LectureNote22.pptx
src/course_files/course_notes/LectureNote23/: LectureNote23.pptx
src/course_files/course_notes/LectureNote24/: LectureNote24.pptx
src/course_files/utility/: CMakeLists.txt  bintree.h
src/iBelieve/: Mission.txt  README.txt
src/iBelieve/.svn/: wc.db
src/iBelieve/Beta_version/: CMakeLists.txt
src/iBelieve/build-Superlime-Desktop_Qt_5_8_0_clang_64bit-Debug/: Makefile  moc_connection.cpp  moc_mainwindow.cpp  moc_ssettingdialog.cpp  ui_mainwindow.h  ui_ssettingdialog.h
src/iBelieve/client/: main.cpp  mainwindow.ui
src/iBelieve/final_goal_calibration/: Final Goal.pptx
src/public/.svn/: wc.db
src/public/src/: CMakeLists.txt
src/yihuiw/.svn/: wc.db
src/yihuiw/binaryStlViewer/: CMakeLists.txt  main.cpp
src/yihuiw/data/.svn/: wc.db
src/yihuiw/naca/: naca4digit.cpp
src/yihuiw/ps1/: CMakeLists.txt
src/yihuiw/ps6/: CMakeLists.txt  ps6lib.cpp
src/yihuiw/simplebitmap/: simplebitmaptemplate.h
src/yihuiw/utility/: bintree.h  bintree1.h
(+251 files in other folders)
