cmake_minimum_required(VERSION 3.7)
set(CMAKE_CXX_STANDARD 11)  
set(CMAKE_CXX_STANDARD_REQUIRED ON)  
add_subdirectory(public/src)
add_subdirectory(yihuiw/ps2/cannonball)
add_subdirectory(yihuiw/ps2/bounce) 
add_subdirectory(yihuiw/simplebitmap)
add_subdirectory(yihuiw/utility)
add_subdirectory(yihuiw/ps3/ps3_1)
add_subdirectory(yihuiw/ps3/ps3_2)
add_subdirectory(yihuiw/ps4/ps4_1)
add_subdirectory(yihuiw/ps4/ps4_2)
add_subdirectory(yihuiw/naca)
add_subdirectory(yihuiw/ps5/ps5_1)
add_subdirectory(yihuiw/ps5/ps5_2)
add_subdirectory(yihuiw/binaryStlViewer)
add_subdirectory(yihuiw/ps6)
add_subdirectory(yihuiw/ps7/ps7_1)
add_subdirectory(yihuiw/ps7/ps7_2)
add_subdirectory(yihuiw/ps8/ps8_1)
add_subdirectory(yihuiw/ps8/ps8_2)